This is a list of changes in pygame's history.

     Nov 14, 2000
	Release the Python Global Interpreter Lock on delays and IO
	Added timer events to pygame.time (vgrade example demonstrates)
	Documentation reorganized, 1st tutorial added
	surfarray.blit_array() supports all bit depths

     Nov 11, 2000
	BUG: pygame.display.set_mode() uses int, not short, for size

     Nov 10, 2000
	Committed to CVS and documentation expanded
	Added pygame.display.get_driver()

0.2: Nov 3, 2000
	Documentation takes a step forward
	Sound, mixer and music, now working   (and added to aliens)
	Addition of get_width, get_height, and get_rect to Surfaces

0.1: Oct 28, 2000
	PyGame First Release